fix: adjust banner subtitle on mobile

--- a/src/components/Sections/Banner/Banner.module.scss
+++ b/src/components/Sections/Banner/Banner.module.scss
@@ -98,4 +98,9 @@
   .paragraph {
     text-align: center;
   }
+
+  .subtitle {
+    flex-direction: column;
+    align-items: center;
+  }
 }
